--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,9 +32,11 @@ jobs:
         with:
           version: 'latest'
 
+      - name: Create .kube directory
+        run: mkdir -p $HOME/.kube
+
       - name: Configure kubectl with Kubeconfig
         run: echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
 
       - name: Deploy to Kubernetes
         run: kubectl apply -f k8s-deployment.yaml
-
