--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,7 @@ jobs:
 
       - name: Configure kubectl with Kubeconfig
         run: echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
-
+      - name: List files
+        run: ls -la
       - name: Deploy to Kubernetes
         run: kubectl apply -f k8s-deployment.yaml
